Reverted Ryan changes, refactored record generator (WIP)
Some of Ryans changes that were interfering with report counts have been
reverted, moved record type enum class into its own header file,
refactored and added to the record generator

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,5 @@ drc/gui/mainmenutabwidget.cpp
 drc/gui/mainmenutabwidget.h
 drc/gui/mainmenutabwidget.ui
 drc/bl/intakeformprocessor.cpp
+
+Docs/drc_db.db3
